--- a/Assignment_002.ipynb
+++ b/Assignment_002.ipynb
@@ -44,9 +44,7 @@
    "source": [
     "- **C++ Code :**\n",
     "    ```\n",
-    "    #include <iostream>\n",
-    "    #include <vector>\n",
-    "    #include <algorithm>\n",
+    "    #include <bits/stdc++.h>\n",
     "    using namespace std;\n",
     "\n",
     "    int arrayPairSum(vector<int>& nums) {\n",
@@ -103,9 +101,7 @@
    "source": [
     "- **C++ Code :**\n",
     "    ```\n",
-    "    #include <iostream>\n",
-    "    #include <vector>\n",
-    "    #include <unordered_set>\n",
+    "    #include <bits/stdc++.h>\n",
     "    using namespace std;\n",
     "\n",
     "    int maxCandies(vector<int>& candyType) {\n",
@@ -169,9 +165,7 @@
    "source": [
     "- **C++ Code :**\n",
     "    ```\n",
-    "    #include <iostream>\n",
-    "    #include <unordered_map>\n",
-    "    #include <vector>\n",
+    "    #include <bits/stdc++.h>\n",
     "    using namespace std;\n",
     "\n",
     "    int findLHS(vector<int>& nums) {\n",
@@ -231,8 +225,7 @@
    "source": [
     "- **C++ Code :**\n",
     "    ```\n",
-    "    #include <iostream>\n",
-    "    #include <vector>\n",
+    "    #include <bits/stdc++.h>\n",
     "    using namespace std;\n",
     "\n",
     "    bool canPlaceFlowers(vector<int>& flowerbed, int n) {\n",
@@ -292,9 +285,7 @@
    "source": [
     "- **C++ Code :**\n",
     "    ```\n",
-    "    #include <iostream>\n",
-    "    #include <vector>\n",
-    "    #include <algorithm>\n",
+    "    #include <bits/stdc++.h>\n",
     "    using namespace std;\n",
     "\n",
     "    int maximumProduct(vector<int>& nums) {\n",
@@ -353,8 +344,7 @@
    "source": [
     "- **C++ Code :**\n",
     "    ```\n",
-    "    #include <iostream>\n",
-    "    #include <vector>\n",
+    "    #include <bits/stdc++.h>\n",
     "    using namespace std;\n",
     "\n",
     "    int search(vector<int>& nums, int target) {\n",
@@ -420,8 +410,7 @@
    "source": [
     "- **C++ Code :**\n",
     "    ```\n",
-    "    #include <iostream>\n",
-    "    #include <vector>\n",
+    "    #include <bits/stdc++.h>\n",
     "    using namespace std;\n",
     "\n",
     "    bool isMonotonic(vector<int>& nums) {\n",
@@ -486,9 +475,7 @@
    "source": [
     "- **C++ Code :**\n",
     "    ```\n",
-    "    #include <iostream>\n",
-    "    #include <vector>\n",
-    "    #include <algorithm>\n",
+    "    #include <bits/stdc++.h>\n",
     "    using namespace std;\n",
     "\n",
     "    int minimumScore(vector<int>& nums, int k) {\n",
