--- a/Assignment_003.ipynb
+++ b/Assignment_003.ipynb
@@ -599,8 +599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Given an array of meeting time intervals where intervals[i] = [starti, endi],\n",
-    "determine if a person could attend all meetings.\n",
+    "8. Given an array of meeting time intervals where intervals[i] = [starti, endi], determine if a person could attend all meetings.\n",
     "\n",
     "    **Example 1:**\n",
     "\n",
