--- a/Assignment_004.ipynb
+++ b/Assignment_004.ipynb
@@ -102,8 +102,8 @@
    "metadata": {},
    "source": [
     "2. Given two **0-indexed** integer arrays nums1 and nums2, return *a list* answer *of size* 2 *where:*\n",
-    "    - answer[0] *is a list of all **distinct** integers in* nums1 *which are **not** present in* nums2.\n",
-    "    - answer[1] *is a list of all **distinct** integers in* nums2 *which are **not** present in* nums1.\n",
+    "    - answer[0] is a list of all **distinct** integers in nums1 which are **not** present in nums2.\n",
+    "    - answer[1] is a list of all **distinct** integers in nums2 which are **not** present in nums1.\n",
     "\n",
     "    **Note:** that the integers in the lists may be returned in **any** order.\n",
     "\n",
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Given a 2D integer array matrix, return *the **transpose** of* matrix.\n",
+    "3. Given a 2D integer array matrix, return the **transpose** of matrix.\n",
     "\n",
     "    The **transpose** of a matrix is the matrix flipped over its main diagonal, switching the matrix's row and column indices.\n",
     "\n",
@@ -337,7 +337,7 @@
    "source": [
     "5. You have n coins and you want to build a staircase with these coins. The staircase consists of k rows where the ith row has exactly i coins. The last row of the staircase **may be** incomplete.\n",
     "\n",
-    "    Given the integer n, return *the number of **complete rows** of the staircase you will build*.\n",
+    "    Given the integer n, return the number of **complete rows** of the staircase you will build.\n",
     "\n",
     "    **Example 1:**\n",
     "\n",
@@ -387,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Given an integer array nums sorted in **non-decreasing** order, return *an array of **the squares of each number** sorted in non-decreasing order*.\n",
+    "6. Given an integer array nums sorted in **non-decreasing** order, return an array of **the squares of each number** sorted in non-decreasing order.\n",
     "\n",
     "    **Example 1:**\n",
     "\n",
