--- a/Assignment_009.ipynb
+++ b/Assignment_009.ipynb
@@ -135,7 +135,7 @@
     "</html>\n",
     "```\n",
     "\n",
-    "![drawing](image/resume.png)\n"
+    "![drawing](./image/resume.png)\n"
    ]
   },
   {
@@ -145,7 +145,7 @@
    "source": [
     "5. Write HTML code so that it looks like the below image.\n",
     "\n",
-    "![drawing](image/95i.png)"
+    "![drawing](./image/95i.png)"
    ]
   },
   {
