--- a/Assignment_005.ipynb
+++ b/Assignment_005.ipynb
@@ -22,8 +22,8 @@
     "    Return *an* m x n *2D array constructed according to the above procedure, or an empty 2D array if it is impossible*.\n",
     "\n",
     "    **Example 1:**\n",
-    "\n",
-    "    <img title=\"2D Array\" alt=\"\" width=\"500px\" src=\"./51.png\">\n",
+    "    \n",
+    "    ![drawing](./Image/51.jpg)\n",
     "\n",
     "    **Input:** original = [1,2,3,4], m = 2, n = 2\n",
     "\n",
@@ -51,17 +51,16 @@
     "    vector<vector<int>> construct2DArray(vector<int>& original, int m, int n) {\n",
     "        int size = original.size();\n",
     "\n",
-    "        // Check if the number of elements in original is equal to m * n\n",
     "        if (size != m * n) {\n",
-    "            return {}; // Return an empty 2D array\n",
+    "            return {}; \n",
     "        }\n",
     "\n",
-    "        vector<vector<int>> result(m, vector<int>(n, 0)); // Initialize the 2D array\n",
+    "        vector<vector<int>> result(m, vector<int>(n, 0));\n",
     "\n",
     "        for (int i = 0; i < size; i++) {\n",
-    "            int row = i / n; // Calculate the row index\n",
-    "            int col = i % n; // Calculate the column index\n",
-    "            result[row][col] = original[i]; // Assign the element to the corresponding position in the 2D array\n",
+    "            int row = i / n; \n",
+    "            int col = i % n;\n",
+    "            result[row][col] = original[i]; \n",
     "        }\n",
     "\n",
     "        return result;\n",
@@ -101,7 +100,7 @@
     "\n",
     "    **Example 1:**\n",
     "\n",
-    "    <img title=\"2D Array\" alt=\"\" width=\"200px\" src=\"./52.png\">\n",
+    "    ![drawing](./Image/52.jpg)\n",
     "\n",
     "    **Input:** n = 5\n",
     "\n",
