--- a/Assignment_006.ipynb
+++ b/Assignment_006.ipynb
@@ -87,7 +87,7 @@
     "\n",
     "    **Example 1:**\n",
     "\n",
-    "    <img title=\"2D Array\" alt=\"\" width=\"200px\" src=\"./download.png\">\n",
+    "    ![drawing](./Image/download.jpg)\n",
     "\n",
     "    **Input:** matrix = [[1,3,5,7],[10,11,16,20],[23,30,34,60]], target = 3\n",
     "\n",
@@ -155,7 +155,7 @@
     "\n",
     "    **Example 1:**\n",
     "\n",
-    "    <img title=\"2D Array\" alt=\"\" width=\"350px\" src=\"./Screenshot_2023-05-29_005352.png\">\n",
+    "    ![drawing](./Image/Screenshot_2023-05-29_005352.jpg)\n",
     "\n",
     "    **Input:** arr = [2,1]\n",
     "\n",
@@ -441,7 +441,7 @@
     "\n",
     "    **Example 1:**\n",
     "\n",
-    "    <img title=\"2D Array\" alt=\"\" width=\"200px\" src=\"./Screenshot_2023-05-29_005522.png\">\n",
+    "    ![drawing](./Image/Screenshot_2023-05-29_005522.jpg)\n",
     "\n",
     "    **Input:** n = 3\n",
     "\n",
@@ -526,7 +526,7 @@
     "\n",
     "    **Example 1:**\n",
     "\n",
-    "    <img title=\"2D Array\" alt=\"\" width=\"500px\" src=\"./Screenshot_2023-05-29_005557.png\">\n",
+    "    ![drawing](./Image/Screenshot_2023-05-29_005557.jpg)\n",
     "\n",
     "    **Input:** mat1 = [[1,0,0],[-1,0,3]], mat2 = [[7,0,0],[0,0,0],[0,0,1]]\n",
     "\n",
