--- a/Assignment_003.ipynb
+++ b/Assignment_003.ipynb
@@ -206,7 +206,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. A permutation of an array of integers is an arrangement of its members into a sequence or linear order.\n",
+    "3. A permutation of an array of integers is an arrangement of its members into a\n",
+    "sequence or linear order.\n",
     "\n",
     "    For example, for arr = [1,2,3], the following are all the permutations of arr:\n",
     "    [1,2,3], [1,3,2], [2, 1, 3], [2, 3, 1], [3,1,2], [3,2,1].\n",
@@ -300,7 +301,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Given a sorted array of distinct integers and a target value, return the index if the target is found. If not, return the index where it would be if it were inserted in order.\n",
+    "4. Given a sorted array of distinct integers and a target value, return the index if the\n",
+    "target is found. If not, return the index where it would be if it were inserted in\n",
+    "order.\n",
     "\n",
     "    You must write an algorithm with O(log n) runtime complexity.\n",
     "\n",
@@ -373,7 +376,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. You are given a large integer represented as an integer array digits, where each digits[i] is the ith digit of the integer. The digits are ordered from most significant to least significant in left-to-right order. The large integer does not contain any leading 0's.\n",
+    "5. You are given a large integer represented as an integer array digits, where each\n",
+    "digits[i] is the ith digit of the integer. The digits are ordered from most significant\n",
+    "to least significant in left-to-right order. The large integer does not contain any\n",
+    "leading 0's.\n",
     "\n",
     "    Increment the large integer by one and return the resulting array of digits.\n",
     "\n",
@@ -446,7 +452,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Given a non-empty array of integers nums, every element appears twice except for one. Find that single one.\n",
+    "6. Given a non-empty array of integers nums, every element appears twice except\n",
+    "for one. Find that single one.\n",
     "\n",
     "    You must implement a solution with a linear runtime complexity and use only\n",
     "    constant extra space.\n",
@@ -506,7 +513,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. You are given an inclusive range [lower, upper] and a sorted unique integer array nums, where all elements are within the inclusive range.\n",
+    "7. You are given an inclusive range [lower, upper] and a sorted unique integer array\n",
+    "nums, where all elements are within the inclusive range.\n",
     "\n",
     "    A number x is considered missing if x is in the range [lower, upper] and x is not in\n",
     "    nums.\n",
@@ -591,7 +599,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Given an array of meeting time intervals where intervals[i] = [starti, endi], determine if a person could attend all meetings.\n",
+    "8. Given an array of meeting time intervals where intervals[i] = [starti, endi],\n",
+    "determine if a person could attend all meetings.\n",
     "\n",
     "    **Example 1:**\n",
     "\n",
