--- a/Assignment_007.ipynb
+++ b/Assignment_007.ipynb
@@ -56,22 +56,22 @@
     "            }\n",
     "\n",
     "            sToT[sChar] = tChar;\n",
-    "        tToS[tChar] = sChar;\n",
+    "            tToS[tChar] = sChar;\n",
+    "        }\n",
+    "\n",
+    "        return true;\n",
     "    }\n",
     "\n",
-    "    return true;\n",
-    "}\n",
+    "    int main() {\n",
+    "        string s = \"egg\";\n",
+    "        string t = \"add\";\n",
     "\n",
-    "int main() {\n",
-    "    string s = \"egg\";\n",
-    "    string t = \"add\";\n",
+    "        bool result = isIsomorphic(s, t);\n",
+    "        cout << (result ? \"true\" : \"false\") << endl;\n",
     "\n",
-    "    bool result = isIsomorphic(s, t);\n",
-    "    cout << (result ? \"true\" : \"false\") << endl;\n",
-    "\n",
-    "    return 0;\n",
-    "}\n",
-    "```\n"
+    "        return 0;\n",
+    "    }\n",
+    "    ```\n"
    ]
   },
   {
@@ -484,7 +484,7 @@
     "\n",
     "    **Example 1:**\n",
     "\n",
-    "    <img title=\"2D Array\" alt=\"\" width=\"300px\" src=\"./71.png\">\n",
+    "    ![drawing](./Image/71.jpg)\n",
     "\n",
     "    **Input:** coordinates = [[1,2],[2,3],[3,4],[4,5],[5,6],[6,7]]\n",
     "\n",
@@ -538,12 +538,6 @@
     "    }\n",
     "    ```\n"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
