--- a/Assignment_008.ipynb
+++ b/Assignment_008.ipynb
@@ -240,7 +240,7 @@
     "\n",
     "    **Example 1:**\n",
     "\n",
-    "    ![drawing](./image/84.jpg)\n",
+    "    ![drawing](./Image/84.jpg)\n",
     "\n",
     "    **Input:** s = \"4(2(3)(1))(6(5))\"\n",
     "\n",
