--- a/Assignment_009.ipynb
+++ b/Assignment_009.ipynb
@@ -135,7 +135,7 @@
     "</html>\n",
     "```\n",
     "\n",
-    "![drawing](./image/resume.jpg)\n"
+    "![drawing](./Image/resume.jpg)\n"
    ]
   },
   {
@@ -145,7 +145,7 @@
    "source": [
     "5. Write HTML code so that it looks like the below image.\n",
     "\n",
-    "![drawing](./image/95i.jpg)"
+    "![drawing](./Image/95i.jpg)"
    ]
   },
   {
@@ -310,7 +310,7 @@
     "</html>\n",
     "```\n",
     "\n",
-    "![drawing](./image/screen_view.jpg)\n"
+    "![drawing](./Image/screen_view.jpg)\n"
    ]
   },
   {
@@ -413,7 +413,7 @@
    "source": [
     "10. Write Html code so that it looks like the below image\n",
     "\n",
-    "![drawing](./image/91.jpg)"
+    "![drawing](./Image/91.jpg)"
    ]
   },
   {
